<resources>
    <string name="app_name">VaccineApp</string>
    <string name="addSuccess">Baby added successfully!</string>
    <string name="addNotSuccess">Error occured during adding baby!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="fullname">Full Name</string>
    <string name="email">E Mail</string>
    <string name="register">Register</string>
    <string name="cancel">Cancel</string>
    <string name="confirmPass">Confirm Password</string>
    <string name="passnotmatch">Passwords are not matching!</string>
    <string name="exit">Are you sure you want to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="regSuccess">Registration is successful. You may log-in.</string>
    <string name="regNotSuccess">Registration is not successful. Username is already available. Please enter another username.</string>
    <string name="exception">Exception!</string>
    <string name="recorded">Number of recorded baby : </string>
    <string name="addBaby">Add Baby</string>
    <string name="ok">OK</string>
    <string name="log_in_error">You are neither a user nor doctor!</string>
    <string name="title_activity_user_main">UserMain</string>

    <string-array name="days">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>

    <string-array name="months">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

    <string name="birthdaydetails">Birthday Details : </string>
    <string name="day">Day : </string>
    <string name="month">Month : </string>
    <string name="year">Year : </string>
    <string name="write_comment">Write Comment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="comment_add_success">Comment added successfully</string>
    <string name="comment_add_notSuccess">Comment could not be added!</string>
    <string name="add_comment">Add Comment</string>

    <string name="action_settings">Settings</string>
</resources>
